  `:config-diff` and e.g.
  `:config-unset -u example.org content.media.video_capture`.
- `:undo` now has a new `-w` / `--window` argument, which can be used to
  restore closed windows (rather than tabs). This is bound to `U` by default.
- When `:undo` is used with a count, it now reopens the count-th to last tab
  instead of the last one.

Added
~~~~~

- New replacement `{aligned_index}` for `tabs.title.format` and `format_pinned`
  which behaves like `{index}`, but space-pads the index based on the total
  numbers of tabs. This can be used to get aligned tab texts with vertical
  tabs.
- New command `:devtools-focus` (bound to `wIf`) to toggle keyboard focus
  between the devtools and web page.
- New `--target private-window` argument, which can be used to open a private
  window in an existing instance from the commandline.

Fixed
~~~~~

- A URL pattern with a `*.` host was considered valid and matched all hosts.
  Due to keybindings like `tsH` toggling scripts for `*://*.{url:host}/*`,
  invoking them on pages without a host (e.g. `about:blank`) could result in
  accidentally allowing/blocking JavaScript for all pages. Such patterns are
  now considered invalid, with existing patterns being automatically removed
  from `autoconfig.yml`.
- When `scrolling.bar` was set to `overlay` (the default), qutebrowser would
  internally override any `enable-features=...` flags passed via `qt.args` or
  `--qt-flag`. It now correctly combines existing `enable-feature` flags with
  internal ones.
- Elements with an inherited "contenteditable" attribute now trigger insert
  mode and get hints assigned correctly.
- When checkmarks, radio buttons and some other elements are styled via the
  Bootstrap CSS framework, they now get hints correctly.
- When the session file isn't writable when qutebrowser is quit, an error is
  now logged instead of crashing.
- When using `-m` with the `qute-lastpass` userscript, it accidentally matched