@@ -42,6 +42,7 @@ Changed
   restore closed windows (rather than tabs). This is bound to `U` by default.
 - When `:undo` is used with a count, it now reopens the count-th to last tab
   instead of the last one.
+- The default `completion.timestamp_format` now also shows the time.
 
 Added
 ~~~~~
